{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 789,
  "lineage": "9852255d-ae74-6101-b012-fa768914ebec",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/data-service-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "data-service-ingress",
                "namespace": "mxd",
                "resource_version": "1115",
                "uid": "3bff802e-94e1-406c-9363-a4bd2205d043"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "data-service-api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/data-service(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "mxd-ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd",
            "metadata": [
              {
                "generation": 0,
                "name": "mxd",
                "resource_version": "683",
                "uid": "58b8d918-56f3-47b0-8911-5830cbc57fdf"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "data-service-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/data-service-api",
            "metadata": [
              {
                "generation": 0,
                "name": "data-service-api",
                "namespace": "mxd",
                "resource_version": "935",
                "uid": "4fa08d92-6e75-4c6a-bdab-56cc80b3e457"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.229.231",
                "cluster_ips": [
                  "10.96.229.231"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "api-port",
                    "node_port": 30153,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "data-service-api"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_deployment.data-service-api",
            "kubernetes_namespace.mxd-ns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dataspace-issuer-did-server-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/dataspace-issuer",
            "metadata": [
              {
                "generation": 0,
                "name": "dataspace-issuer",
                "namespace": "mxd",
                "resource_version": "963",
                "uid": "0311e829-54f6-4514-9aa7-b25576fac0e8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.218.166",
                "cluster_ips": [
                  "10.96.218.166"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "web",
                    "node_port": 31389,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "dataspace-issuer-server"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_deployment.dataspace-issuer-did-server",
            "kubernetes_namespace.mxd-ns"
          ]
        }
      ]
    },
    {
      "module": "module.alice-catalog-server",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/alice-cs-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "alice-cs-ingress",
                "namespace": "mxd",
                "resource_version": "49853",
                "uid": "0c9016a5-9f57-4b4e-aa21-089c6de2b7a3"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-cs",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice-cs(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.alice-catalog-server.kubernetes_config_map.catalog-server-config",
            "module.alice-catalog-server.kubernetes_deployment.catalog-server",
            "module.alice-catalog-server.kubernetes_service.catalog-server-service",
            "module.alice-connector.helm_release.connector",
            "module.alice-connector.kubernetes_config_map.document",
            "module.alice-connector.kubernetes_config_map.participants-map",
            "module.alice-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.alice-connector.kubernetes_job.azurite-init",
            "module.alice-connector.kubernetes_service.controlplane-service",
            "module.alice-identityhub.kubernetes_config_map.identityhub-config",
            "module.alice-identityhub.kubernetes_deployment.identityhub",
            "module.alice-identityhub.kubernetes_service.ih-service",
            "module.alice-minio.kubernetes_service.minio-service",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.alice-catalog-server",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "catalog-server-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/alice-cs",
            "metadata": [
              {
                "generation": 0,
                "name": "alice-cs",
                "namespace": "mxd",
                "resource_version": "49729",
                "uid": "c6132443-8681-4470-89c9-2765d2415885"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.109.176",
                "cluster_ips": [
                  "10.96.109.176"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "health",
                    "node_port": 31419,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "management",
                    "node_port": 31207,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "protocol",
                    "node_port": 32448,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  },
                  {
                    "name": "debug",
                    "node_port": 31010,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "alice-cs"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.alice-catalog-server.kubernetes_config_map.catalog-server-config",
            "module.alice-catalog-server.kubernetes_deployment.catalog-server",
            "module.alice-connector.helm_release.connector",
            "module.alice-connector.kubernetes_config_map.document",
            "module.alice-connector.kubernetes_config_map.participants-map",
            "module.alice-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.alice-connector.kubernetes_job.azurite-init",
            "module.alice-connector.kubernetes_service.controlplane-service",
            "module.alice-identityhub.kubernetes_config_map.identityhub-config",
            "module.alice-identityhub.kubernetes_deployment.identityhub",
            "module.alice-identityhub.kubernetes_service.ih-service",
            "module.alice-minio.kubernetes_service.minio-service",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.alice-connector",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "mxd-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/alice-connector-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "alice-connector-ingress",
                "namespace": "mxd",
                "resource_version": "1117",
                "uid": "659bb0bb-9fa2-49e8-abcd-94e056d43d09"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-tractusx-connector-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-tractusx-connector-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice/health(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-tractusx-connector-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8186
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice(/|$)(proxy/.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-tractusx-connector-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice(/|$)(api/public.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8085
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice/fc(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_namespace.mxd-ns",
            "module.alice-connector.kubernetes_service.controlplane-service",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite"
          ]
        }
      ]
    },
    {
      "module": "module.alice-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "controlplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/alice-controlplane",
            "metadata": [
              {
                "generation": 0,
                "name": "alice-controlplane",
                "namespace": "mxd",
                "resource_version": "1000",
                "uid": "122d92c3-5ca0-4316-b762-10779da3d14b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.187.240",
                "cluster_ips": [
                  "10.96.187.240"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "management",
                    "node_port": 32095,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "health",
                    "node_port": 30173,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "protocol",
                    "node_port": 32568,
                    "port": 8084,
                    "protocol": "TCP",
                    "target_port": "8084"
                  },
                  {
                    "name": "debug",
                    "node_port": 30150,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "catalog",
                    "node_port": 30915,
                    "port": 8085,
                    "protocol": "TCP",
                    "target_port": "8085"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "alice-controlplane",
                  "app.kubernetes.io/name": "tractusx-connector-controlplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite"
          ]
        }
      ]
    },
    {
      "module": "module.alice-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/alice-ih-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "alice-ih-ingress",
                "namespace": "mxd",
                "resource_version": "49857",
                "uid": "8021257d-e5c2-4c8c-abe2-c9660d9ac899"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-ih",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice-ih/cs(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-ih",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice-ih/sts(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.alice-connector.helm_release.connector",
            "module.alice-connector.kubernetes_config_map.document",
            "module.alice-connector.kubernetes_config_map.participants-map",
            "module.alice-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.alice-connector.kubernetes_job.azurite-init",
            "module.alice-connector.kubernetes_service.controlplane-service",
            "module.alice-identityhub.kubernetes_config_map.identityhub-config",
            "module.alice-identityhub.kubernetes_deployment.identityhub",
            "module.alice-identityhub.kubernetes_service.ih-service",
            "module.alice-minio.kubernetes_service.minio-service",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.alice-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "did-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/alice-ih-did-server-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/alice-ih/$2"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "alice-ih-did-server-ingress",
                "namespace": "mxd",
                "resource_version": "49854",
                "uid": "a7124a5b-ac60-4535-932d-bf622639200d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alice-ih",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/alice-ih(/|\u0026)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.alice-connector.helm_release.connector",
            "module.alice-connector.kubernetes_config_map.document",
            "module.alice-connector.kubernetes_config_map.participants-map",
            "module.alice-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.alice-connector.kubernetes_job.azurite-init",
            "module.alice-connector.kubernetes_service.controlplane-service",
            "module.alice-identityhub.kubernetes_config_map.identityhub-config",
            "module.alice-identityhub.kubernetes_deployment.identityhub",
            "module.alice-identityhub.kubernetes_service.ih-service",
            "module.alice-minio.kubernetes_service.minio-service",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.alice-identityhub",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "ih-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/alice-ih",
            "metadata": [
              {
                "generation": 0,
                "name": "alice-ih",
                "namespace": "mxd",
                "resource_version": "49658",
                "uid": "86208f98-c5ab-4c7d-b13b-2333b8e320db"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.35.44",
                "cluster_ips": [
                  "10.96.35.44"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "credentials",
                    "node_port": 32251,
                    "port": 7082,
                    "protocol": "TCP",
                    "target_port": "7082"
                  },
                  {
                    "name": "debug",
                    "node_port": 32285,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "identity",
                    "node_port": 30349,
                    "port": 7081,
                    "protocol": "TCP",
                    "target_port": "7081"
                  },
                  {
                    "name": "did",
                    "node_port": 30303,
                    "port": 7083,
                    "protocol": "TCP",
                    "target_port": "7083"
                  },
                  {
                    "name": "sts",
                    "node_port": 32060,
                    "port": 7084,
                    "protocol": "TCP",
                    "target_port": "7084"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "alice-ih"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.alice-connector.helm_release.connector",
            "module.alice-connector.kubernetes_config_map.document",
            "module.alice-connector.kubernetes_config_map.participants-map",
            "module.alice-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.alice-connector.kubernetes_job.azurite-init",
            "module.alice-connector.kubernetes_service.controlplane-service",
            "module.alice-identityhub.kubernetes_config_map.identityhub-config",
            "module.alice-identityhub.kubernetes_deployment.identityhub",
            "module.alice-minio.kubernetes_service.minio-service",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.alice-minio",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "minio-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/alice-minio",
            "metadata": [
              {
                "generation": 0,
                "name": "alice-minio",
                "namespace": "mxd",
                "resource_version": "746",
                "uid": "bc7b487d-2bc7-419b-8e82-d3448f7f61e7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.170.193",
                "cluster_ips": [
                  "10.96.170.193"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "api-port",
                    "node_port": 31335,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  },
                  {
                    "name": "console-port",
                    "node_port": 31145,
                    "port": 9001,
                    "protocol": "TCP",
                    "target_port": "9001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "alice-minio"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.azurite",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "azurite",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/azurite",
            "metadata": [
              {
                "generation": 0,
                "name": "azurite",
                "namespace": "mxd",
                "resource_version": "987",
                "uid": "3bb83403-b1e7-4df4-9b55-0f8f5fca04a7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.143.3",
                "cluster_ips": [
                  "10.96.143.3"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "blob-port",
                    "node_port": 0,
                    "port": 10000,
                    "protocol": "TCP",
                    "target_port": "10000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "azurite"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite"
          ]
        }
      ]
    },
    {
      "module": "module.bob-connector",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "mxd-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/bob-connector-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "bob-connector-ingress",
                "namespace": "mxd",
                "resource_version": "1116",
                "uid": "3adeb83f-e31c-4686-a2e3-2c36a7c79a28"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-tractusx-connector-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-tractusx-connector-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob/health(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-tractusx-connector-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8186
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob(/|$)(proxy/.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-tractusx-connector-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob(/|$)(api/public.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8085
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob/fc(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.bob-connector.kubernetes_service.controlplane-service"
          ]
        }
      ]
    },
    {
      "module": "module.bob-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "controlplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/bob-controlplane",
            "metadata": [
              {
                "generation": 0,
                "name": "bob-controlplane",
                "namespace": "mxd",
                "resource_version": "1008",
                "uid": "2279c4f7-fbd2-4017-87a7-91fac06b343d"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.79.57",
                "cluster_ips": [
                  "10.96.79.57"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "management",
                    "node_port": 30428,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "health",
                    "node_port": 32530,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "protocol",
                    "node_port": 31568,
                    "port": 8084,
                    "protocol": "TCP",
                    "target_port": "8084"
                  },
                  {
                    "name": "debug",
                    "node_port": 32100,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "catalog",
                    "node_port": 30142,
                    "port": 8085,
                    "protocol": "TCP",
                    "target_port": "8085"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "bob-controlplane",
                  "app.kubernetes.io/name": "tractusx-connector-controlplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite"
          ]
        }
      ]
    },
    {
      "module": "module.bob-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/bob-ih-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "bob-ih-ingress",
                "namespace": "mxd",
                "resource_version": "49855",
                "uid": "f8211eeb-e940-4f8a-a8d4-5de442568f3f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-ih",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob-ih/cs(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-ih",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob-ih/sts(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.bob-connector.helm_release.connector",
            "module.bob-connector.kubernetes_config_map.document",
            "module.bob-connector.kubernetes_config_map.participants-map",
            "module.bob-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.bob-connector.kubernetes_job.azurite-init",
            "module.bob-connector.kubernetes_service.controlplane-service",
            "module.bob-identityhub.kubernetes_config_map.identityhub-config",
            "module.bob-identityhub.kubernetes_deployment.identityhub",
            "module.bob-identityhub.kubernetes_service.ih-service",
            "module.bob-minio.kubernetes_service.minio-service",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.bob-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "did-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/bob-ih-did-server-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/bob-ih/$2"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "bob-ih-did-server-ingress",
                "namespace": "mxd",
                "resource_version": "49856",
                "uid": "3c44d291-6835-4aa2-bb55-a7786a6ff4e9"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bob-ih",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bob-ih(/|\u0026)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.bob-connector.helm_release.connector",
            "module.bob-connector.kubernetes_config_map.document",
            "module.bob-connector.kubernetes_config_map.participants-map",
            "module.bob-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.bob-connector.kubernetes_job.azurite-init",
            "module.bob-connector.kubernetes_service.controlplane-service",
            "module.bob-identityhub.kubernetes_config_map.identityhub-config",
            "module.bob-identityhub.kubernetes_deployment.identityhub",
            "module.bob-identityhub.kubernetes_service.ih-service",
            "module.bob-minio.kubernetes_service.minio-service",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.bob-identityhub",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "ih-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/bob-ih",
            "metadata": [
              {
                "generation": 0,
                "name": "bob-ih",
                "namespace": "mxd",
                "resource_version": "49657",
                "uid": "f9a513f5-bed0-450e-b32f-b8f28675ae1e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.46.64",
                "cluster_ips": [
                  "10.96.46.64"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "credentials",
                    "node_port": 30279,
                    "port": 7082,
                    "protocol": "TCP",
                    "target_port": "7082"
                  },
                  {
                    "name": "debug",
                    "node_port": 31541,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "identity",
                    "node_port": 31874,
                    "port": 7081,
                    "protocol": "TCP",
                    "target_port": "7081"
                  },
                  {
                    "name": "did",
                    "node_port": 30535,
                    "port": 7083,
                    "protocol": "TCP",
                    "target_port": "7083"
                  },
                  {
                    "name": "sts",
                    "node_port": 31745,
                    "port": 7084,
                    "protocol": "TCP",
                    "target_port": "7084"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "bob-ih"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.azurite.kubernetes_config_map.azurite-config",
            "module.azurite.kubernetes_deployment.azurite",
            "module.azurite.kubernetes_service.azurite",
            "module.bob-connector.helm_release.connector",
            "module.bob-connector.kubernetes_config_map.document",
            "module.bob-connector.kubernetes_config_map.participants-map",
            "module.bob-connector.kubernetes_ingress_v1.mxd-ingress",
            "module.bob-connector.kubernetes_job.azurite-init",
            "module.bob-connector.kubernetes_service.controlplane-service",
            "module.bob-identityhub.kubernetes_config_map.identityhub-config",
            "module.bob-identityhub.kubernetes_deployment.identityhub",
            "module.bob-minio.kubernetes_service.minio-service",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres",
            "module.postgres.kubernetes_service.pg-service"
          ]
        }
      ]
    },
    {
      "module": "module.bob-minio",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "minio-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/bob-minio",
            "metadata": [
              {
                "generation": 0,
                "name": "bob-minio",
                "namespace": "mxd",
                "resource_version": "736",
                "uid": "033ac81d-1030-4814-bc53-a1cea4f798ad"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.76.77",
                "cluster_ips": [
                  "10.96.76.77"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "api-port",
                    "node_port": 30433,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  },
                  {
                    "name": "console-port",
                    "node_port": 30911,
                    "port": 9001,
                    "protocol": "TCP",
                    "target_port": "9001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "bob-minio"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dataspace-issuer",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/dataspace-issuer-service-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "dataspace-issuer-service-ingress",
                "namespace": "mxd",
                "resource_version": "10931",
                "uid": "e58cefd6-caaa-418a-96be-cb82f0d6633b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "dataspace-issuer-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 10015
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/issuer/cs(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "dataspace-issuer-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 10013
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/issuer/ad(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.issuer-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.dataspace-issuer-postgres.kubernetes_config_map.postgres-env",
            "module.dataspace-issuer-postgres.kubernetes_deployment.postgres",
            "module.dataspace-issuer-postgres.kubernetes_service.pg-service",
            "module.dataspace-issuer.kubernetes_config_map.issuerservice-config",
            "module.dataspace-issuer.kubernetes_deployment.issuerservice",
            "module.dataspace-issuer.kubernetes_service.issuerservice-service"
          ]
        }
      ]
    },
    {
      "module": "module.dataspace-issuer",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "did-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mxd/dataspace-issuer-service-did-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/issuer/$2"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "dataspace-issuer-service-did-ingress",
                "namespace": "mxd",
                "resource_version": "10932",
                "uid": "d20e5114-39cf-46f3-bcd1-5fbc4503daee"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "dataspace-issuer-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 10016
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/issuer(/|\u0026)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.issuer-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.dataspace-issuer-postgres.kubernetes_config_map.postgres-env",
            "module.dataspace-issuer-postgres.kubernetes_deployment.postgres",
            "module.dataspace-issuer-postgres.kubernetes_service.pg-service",
            "module.dataspace-issuer.kubernetes_config_map.issuerservice-config",
            "module.dataspace-issuer.kubernetes_deployment.issuerservice",
            "module.dataspace-issuer.kubernetes_service.issuerservice-service"
          ]
        }
      ]
    },
    {
      "module": "module.dataspace-issuer",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "issuerservice-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/dataspace-issuer-service",
            "metadata": [
              {
                "generation": 0,
                "name": "dataspace-issuer-service",
                "namespace": "mxd",
                "resource_version": "10912",
                "uid": "4d1eee30-bc9a-4144-a198-9d531f8643fd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.240.241",
                "cluster_ips": [
                  "10.96.240.241"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "web",
                    "node_port": 30523,
                    "port": 10010,
                    "protocol": "TCP",
                    "target_port": "10010"
                  },
                  {
                    "name": "sts",
                    "node_port": 31530,
                    "port": 10011,
                    "protocol": "TCP",
                    "target_port": "10011"
                  },
                  {
                    "name": "debug",
                    "node_port": 31488,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "issuance",
                    "node_port": 30257,
                    "port": 10012,
                    "protocol": "TCP",
                    "target_port": "10012"
                  },
                  {
                    "name": "issueradmin",
                    "node_port": 32150,
                    "port": 10013,
                    "protocol": "TCP",
                    "target_port": "10013"
                  },
                  {
                    "name": "identity",
                    "node_port": 32432,
                    "port": 10015,
                    "protocol": "TCP",
                    "target_port": "10015"
                  },
                  {
                    "name": "did",
                    "node_port": 31351,
                    "port": 10016,
                    "protocol": "TCP",
                    "target_port": "10016"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "dataspace-issuer-service"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.issuer-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.dataspace-issuer-postgres.kubernetes_config_map.postgres-env",
            "module.dataspace-issuer-postgres.kubernetes_deployment.postgres",
            "module.dataspace-issuer-postgres.kubernetes_service.pg-service",
            "module.dataspace-issuer.kubernetes_config_map.issuerservice-config",
            "module.dataspace-issuer.kubernetes_deployment.issuerservice"
          ]
        }
      ]
    },
    {
      "module": "module.dataspace-issuer-postgres",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/issuer-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "issuer-postgres-service",
                "namespace": "mxd",
                "resource_version": "1065",
                "uid": "27f1a2be-8070-4af6-a16c-812424d189c1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.201.95",
                "cluster_ips": [
                  "10.96.201.95"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "issuer-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.issuer-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.dataspace-issuer-postgres.kubernetes_config_map.postgres-env",
            "module.dataspace-issuer-postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    },
    {
      "module": "module.postgres[\"alice\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/alice-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "alice-postgres-service",
                "namespace": "mxd",
                "resource_version": "1185",
                "uid": "78a3d0ac-0a36-4a74-b24d-935a694bf9a7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.150.189",
                "cluster_ips": [
                  "10.96.150.189"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "alice-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    },
    {
      "module": "module.postgres[\"alice-catalogserver\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/alice-catalogserver-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "alice-catalogserver-postgres-service",
                "namespace": "mxd",
                "resource_version": "1196",
                "uid": "cd517c78-0c4a-407d-b65f-94f7a3087a12"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.132.36",
                "cluster_ips": [
                  "10.96.132.36"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "alice-catalogserver-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    },
    {
      "module": "module.postgres[\"bdrs\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/bdrs-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "bdrs-postgres-service",
                "namespace": "mxd",
                "resource_version": "1192",
                "uid": "9a9fe1c9-3587-453b-80c2-d33fd3dd5e9b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.151.245",
                "cluster_ips": [
                  "10.96.151.245"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "bdrs-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    },
    {
      "module": "module.postgres[\"bob\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mxd/bob-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "bob-postgres-service",
                "namespace": "mxd",
                "resource_version": "1186",
                "uid": "9b960582-113c-4903-b09c-aad03550c3db"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.16.147",
                "cluster_ips": [
                  "10.96.16.147"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "bob-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config",
            "kubernetes_namespace.mxd-ns",
            "module.postgres.kubernetes_config_map.postgres-env",
            "module.postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    }
  ]
}